test/org/midica/testfiles/failing/eff-func-pbr-with-percent.midica
INCLUDE inc/instruments.midica


0: bend_range.set(12.0%)
